--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          #  两行一组，删除不需要的版本
+          #  两行一组，删除不需要的版
      
+
+
           - platform: ds3617xs
             version: 7.1.0-42661
 
